--- a/package.json
+++ b/package.json
@@ -4,30 +4,31 @@
     "description": "Микросервис авторизации на Node.js с использованием PostgreSQL, Redis и JWT",
     "main": "src/server.js",
     "scripts": {
-      "start": "node src/server.js",
-      "dev": "nodemon src/server.js",
-      "migrate": "knex migrate:latest",
-      "rollback": "knex migrate:rollback"
+        "start": "node src/server.js",
+        "dev": "nodemon src/server.js",
+        "migrate": "knex migrate:latest",
+        "rollback": "knex migrate:rollback",
+        "test": "jest"
     },
     "dependencies": {
-      "express": "^4.18.2",
-      "dotenv": "^16.0.3",
-      "pg": "^8.7.1",
-      "ioredis": "^5.3.1",
-      "jsonwebtoken": "^9.0.0",
-      "bcrypt": "^5.1.0",
-      "knex": "^2.4.2",
-      "cors":"^2.8.5",
-      "helmet": "^6.0.1",
-      "express-rate-limit": "^6.7.0"  
+        "bcrypt": "^5.1.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "express-rate-limit": "^6.7.0",
+        "helmet": "^6.0.1",
+        "ioredis": "^5.3.1",
+        "jsonwebtoken": "^9.0.0",
+        "knex": "^2.4.2",
+        "pg": "^8.7.1",
+        "supertest": "^7.0.0"
     },
     "devDependencies": {
-      "nodemon": "^3.0.1"
+        "nodemon": "^3.0.1"
     },
     "engines": {
-      "node": ">=16.0.0"
+        "node": ">=16.0.0"
     },
     "author": "nedloz",
     "license": "MIT"
-  }
-  
+}
