--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "dev": "nodemon src/server.js",
         "migrate": "knex migrate:latest",
         "rollback": "knex migrate:rollback",
-        "test": "jest"
+        "test": "jest --runInBand --forceExit",
+        "test:docker": "docker-compose -f docker-compose.test.yml up --abort-on-container-exit --build"
     },
     "dependencies": {
         "bcrypt": "^5.1.0",
@@ -21,10 +22,12 @@
         "jsonwebtoken": "^9.0.0",
         "knex": "^2.4.2",
         "pg": "^8.7.1",
-        "supertest": "^7.0.0"
+        "winston": "^3.17.0"
     },
     "devDependencies": {
-        "nodemon": "^3.0.1"
+        "jest": "^29.7.0",
+        "nodemon": "^3.0.1",
+        "supertest": "^7.0.0"
     },
     "engines": {
         "node": ">=16.0.0"
